unpackaged/main/default/objects/FPC_AMI_PreQual_Queue__c/FPC_AMI_PreQual_Queue__c.object-meta.xml
<CustomObject>
    <description>Queue for sending Pre Qualifications to AMI</description>
    <label>AMI PreQual Queue</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>AMI PreQual Queue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AMI PreQual Queue</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>