unpackaged/main/default/objects/FPC_AMI_PreQual_Queue__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error Message</description>
    <inlineHelpText>Error Message</inlineHelpText>
    <label>Error Message</label>
    <length>100</length>
    <type>Text</type>
</CustomField>