unpackaged/main/default/objects/FPC_AMI_PreQual_Queue__c/fields/FileName__c.field-meta.xml
<CustomField>
    <fullName>FileName__c</fullName>
    <description>File Name</description>
    <inlineHelpText>File Name</inlineHelpText>
    <label>FileName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>