unpackaged/main/default/objects/FPC_AMI_PreQual_Queue__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>AMI PreQual Queue (Opportunity Name)</relationshipLabel>
    <relationshipName>AMI_PreQual_Queue1</relationshipName>
    <type>Lookup</type>
</CustomField>